--- a/index.html
+++ b/index.html
@@ -24,20 +24,62 @@
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a Escola</h2>
             <p class="escola-texto-um">A Escola Laranjeiras foi fundada em 1955 e contém aulas do 6° ano do Fundamental II ao 3 ° ano do Ensino médio .</p>
-            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série B. Nós estamos desenvolvendo o projeto de matématica II </p>
+            <p class="escola-texto-dois">Está turma é a Segunda Série B. Nós estamos desenvolvendo o projeto de matématica II </p>
         </div>
 <img class="escola-imagem" src="High School-bro.png" alt="escola">
     </section>
     <section class="estudante"> 
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2> 
+        <div class="estudante-todos"> 
+            <samp></samp>  
         <div class="estudante-div">
-        <img class="estudante-imagem" src="menina1.jpg" alt="isa">
+        <img class="estudante-imagem" src="julia.jpg" alt="isa">
         <h3>Julia </h3>
-        <img class=estudante-icone src="snapchat.png" alt="">
-        <img class=estudante-icone src="insta.png" alt="">
-        <img class=estudante-icone src="whatsapp.png" alt="">
+        <a href=https://github.com/isa0311><img class=estudante-icone src="snapchat.png" alt=""></a>
+        <a href=https://github.com/isa0311><img class=estudante-icone src="insta.png" alt=""></a>
+        <a href=https://github.com/isa0311><img class=estudante-icone src="whatsapp.png" alt=""></a>
     </div>
-    </section>
-</body>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="loira.jpg" alt="isa">
+        <h3 class="estudante-nome">Sabrina </h3>
+        <a href=https://github.com/isa0311><img class=estudante-icone src="snapchat.png" alt=""></a>
+        <a href=https://github.com/isa0311> <img class=estudante-icone src="insta.png" alt=""></a>
+        <a href=https://github.com/isa0311><img class=estudante-icone src="whatsapp.png" alt=""></a>
+    </div>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="ruivaa.jpg" alt="isa">
+        <h3 class="estudante-nome">Beatriz </h3>
+        <a href=https://github.com/isa0311> <img class=estudante-icone src="snapchat.png" alt=""></a>
+        <a href=https://github.com/isa0311> <img class=estudante-icone src="insta.png" alt=""></a>
+        <a href=https://github.com/isa0311><img class=estudante-icone src="whatsapp.png" alt=""></a>
+    </div>
+    <samp></samp>
+    <samp></samp>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="p.jpg" alt="isa">
+        <h3 class="estudante-nome">Pedro</h3>
+        <a href=https://github.com/isa0311><img class=estudante-icone src="snapchat.png" alt=""></a>
+        <a href=https://github.com/isa0311><img class=estudante-icone src="insta.png" alt=""></a>
+        <a href=https://github.com/isa0311> <img class=estudante-icone src="whatsapp.png" alt=""></a>
+    </div>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="download (3).jpg" alt="isa">
+        <h3 class="estudante-nome">Ricardo</h3>
+        <a href=https://github.com/isa0311><img class=estudante-icone src="snapchat.png" alt=""></a>
+        <a href=https://github.com/isa0311><img class=estudante-icone src="insta.png" alt=""></a>
+    <a href=https://github.com/isa0311><img class=estudante-icone src="whatsapp.png" alt=""></a>
+    </div>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="Annaa.jpg" alt="isa">
+        <h3 class="estudante-nome">Anna </h3>
+        <a href=https://github.com/isa0311><img class=estudante-icone src="snapchat.png" alt=""></a>
+        <a href=https://github.com/isa0311><img class=estudante-icone src="insta.png" alt=""></a>
+        <a href=https://github.com/isa0311><img class=estudante-icone src="whatsapp.png" alt=""></a>
+    </div>
 
-</html>
+    </section>
+    <footer class="rodape">
+        <img class="rodape-imagem" src="pana.png" alt="">
+
+    </footer>
+</body>
